# quickcpp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  quickcpp  quickcpp-build
examples/: helloworld.cpp  qt.cpp
quickcpp/: main.py
